# graphrust

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config  config.toml
graph_format/: Cargo.toml
graph_format/src/: lib.rs
import_neo4j/: Cargo.toml
import_neo4j/src/: gephi.rs  louvain.rs  main.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
plots/: Cargo.toml
plots/src/: main.rs
src/: app.rs  camera.rs  combo_filter.rs  geom_draw.rs  graph.frag  graph.vert  graph_storage.rs  lib.rs  main.rs  ui.rs  utils.rs  web.rs
src/shaders/: graph.frag  graph.vert
test_format/: Cargo.toml
test_format/src/: main.rs
viewer/: .htaccess  Cargo.toml  Trunk.toml  build.rs  deploy.py  index.html
viewer/benches/: pathfinding.rs
viewer/examples/: n4j_stats.rs
viewer/locales/: app.yml
viewer/src/: app.rs  camera.rs  combo_filter.rs  geom_draw.rs  gfonts.rs  graph_render.rs  graph_storage.rs  http.rs  lib.rs  main.rs  search.rs  threading.rs  ui.rs  utils.rs
viewer/src/algorithms/: louvain.rs  mod.rs  pathfinding.rs
viewer/src/graph_render/: camera.rs  geom_draw.rs  mod.rs
viewer/src/graph_render/shaders/: basic.frag  basic.wgsl  common.glsl  common.wgsl  graph.vert  graph_edge.vert  graph_edge.wgsl  graph_node.frag  graph_node.vert  graph_node.wgsl
viewer/src/shaders/: basic.frag  basic.vert  graph.vert  graph_edge.frag  graph_node.frag  person.vert
viewer/src/ui/: mod.rs  modal.rs  tabs.rs
viewer/src/ui/sections/: algos.rs  class.rs  details.rs  display.rs  infos.rs  mod.rs  path.rs
viewer/src/ui/widgets/: combo_filter.rs  mod.rs
viewer/tests/: load_perf.rs
