
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1
#lto = "fat"
#codegen-units = 1

#[profile.'cfg(target_arch="wasm32")'.release]
#lto = "fat"
#codegen-units = 1

[profile.dev.package."*"]
opt-level = 2

[workspace]
members = [
    "import_neo4j",
    "graph_format",
    "viewer",
    "plots"
]
resolver = "2"