# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.desktop-release]
inherits = "release"
debug = true
#lto = "fat"
#codegen-units = 1

#[profile.'cfg(target_arch="wasm32")'.release]
#lto = "fat"
#codegen-units = 1

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[workspace]
members = [
    "import_neo4j",
    "graph_format",
    "viewer",
    "plots",
    "test_format"
]
resolver = "2"

[patch.crates-io]
# TODO: update this when parking_lot_core > 0.9.9 is released
# https://github.com/Amanieu/parking_lot/pull/435#issuecomment-2072218790
parking_lot_core = { git = "https://github.com/Amanieu/parking_lot" }