[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4"
derivative = "2.2"
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
] }
egui = "0.27"
instant = "0.1"
itertools = "0.12"
nalgebra = "0.32"
pollster = "0.3"
speedy = "0.8"
log = "0.4"
graph_format = { path = "../graph_format" }
graphrust_macros = { path = "../macros" }
egui_extras = "0.27"
egui_dock = "0.12"
rayon = "1.8"
zearch = { git = "https://github.com/zdimension/zearch" }
#zearch = { path = "../../zearch" }

[dev-dependencies]
log = "*"

[build-dependencies]
anyhow = "1"
vergen = { version = "8.3.1", features = ["build", "git", "gitcl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "*", features = ["sync"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "*"
js-sys = "*"
web-sys = { version = "*", features = ["XmlHttpRequest", "XmlHttpRequestResponseType", "WorkerGlobalScope", "Performance"] }
parking_lot = { version = "*", features = ["nightly"] }
wasm-logger = "0.2.0"
wasm_thread = "0.3.0"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies.chrono]
version = "*"
features = ["wasmbind"]

