[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4"
derivative = "2.2"
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
] }
egui = "0.29.1"
instant = "0.1"
itertools = "0.13"
pollster = "0.3"
speedy = "0.8"
log = "0.4"
graph_format = { path = "../graph_format" }
graphrust_macros = { path = "../macros" }
egui_extras = "0.29.1"
egui_dock = "0.14.0"
rayon = "1.10"
zearch = { git = "https://github.com/zdimension/zearch" }
ahash = "0.8.11"
rand = "0.8"
forceatlas2 = { version = "0.6", features = ["default"] } # 0.7 is broken since it uses some old nightly features
colourado-iter = "1.2"
#zearch = { path = "../../zearch" }

[dev-dependencies]
log = "*"

[build-dependencies]
anyhow = "1"
vergen-gitcl = { version = "1.0.0", features = ["build"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster = { version = "0.3" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "*", features = ["sync", "time"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "*"
js-sys = "*"
web-sys = { version = "*", features = ["XmlHttpRequest", "XmlHttpRequestResponseType", "WorkerGlobalScope", "Performance", "ProgressEvent"] }
parking_lot = { version = "*", features = ["nightly"] }
wasm-logger = "0.2.0"
wasm_thread = "0.3.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "*", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.chrono]
version = "*"
features = ["wasmbind"]

