[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4"
derivative = "2.2"
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
] }
egui = "0.30.0"
itertools = "0.14.0"
speedy = "0.8"
log = "0.4"
graph_format = { path = "../graph_format" }
egui_extras = "0.30.0"
egui_dock = "0.15.0"
rayon = "1.10"
zearch = { git = "https://github.com/zdimension/zearch" }
ahash = "0.8.11"
rand = "0.8"
forceatlas2 = { version = "0.7", features = ["default"], git = "https://framagit.org/ZettaScript/forceatlas2-rs" } # 0.7 is broken since it uses some old nightly features
colourado-iter = "1.2"
anyhow = "1"
egui-modal = "0.6.0"
parking_lot = { version = "*", features = ["send_guard"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-i18n = "3"
egui_commonmark = "0.19.0"
bit-set = "0.8.0"

[features]
deadlock_detection = ["parking_lot/deadlock_detection"]

[dev-dependencies]
log = "*"
criterion = "0.5"

[[bench]]
name = "pathfinding"
harness = false

[build-dependencies]
anyhow = "1"
vergen-gitcl = { version = "1.0.0", features = ["build"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "*", features = ["sync", "time"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.99"
js-sys = "*"
web-sys = { version = "*", features = ["XmlHttpRequest", "XmlHttpRequestResponseType", "WorkerGlobalScope", "Performance", "ProgressEvent"] }
parking_lot = { version = "*", features = ["nightly"] }
wasm-logger = "0.2.0"
wasm_thread = "0.3.3"
console_error_panic_hook = "0.1.7"
getrandom = { version = "*", features = ["js"] }
wasm-bindgen-rayon = { version = "*", features = ["no-bundler"] }
chrono = { version = "*", features = ["wasmbind"] }

[package.metadata.i18n]
default-locale = "en"
available-locales = ["en", "fr"]
minify-key = true
minify-key-len = 12
minify-key-thresh = 8
minify-key-prefix = "tr_"
